<resources>
    <string name="app_name">FamilySchedulingApplication</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home_management_icon">Home Management Icon</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="menu_button">Menu Button</string>
    <string name="menu_item">Item</string>
    <string name="mbs_menu_item_button">MBS Menu Item</string>
    <string name="home">Home</string>
    <string name="go_home">Go Home</string>
    <string name="calendar">Calendar</string>
    <string name="bills">Bills</string>
    <string name="message_board">Message Board</string>
    <string name="lists_activities"><![CDATA[Lists & Activities]]></string>
    <string name="go_to_lists_and_activities">Go To Lists and Activities</string>
    <string name="go_to_message_board">Go To Message Board</string>
    <string name="go_to_bills">Go To Bills</string>
    <string name="go_to_calendar">Go To Calendar</string>
    <string name="log_out">Log Out</string>
    <string name="logout">Logout</string>
    <string name="welcome_text">Welcome</string>
    <string name="todo">TODO</string>
    <string name="create_home">Create Home</string>
    <string name="join_home">Join Home</string>
    <string name="access_code">Access Code</string>
    <string name="or">OR</string>
    <string name="home_name">Home Name</string>
    <string name="back_button">Back Button</string>
    <string-array name="menu_options">
        <item>Home</item>
        <item>Calendar</item>
        <item>Bills</item>
        <item>Board</item>
        <item>Lists</item>
    </string-array>
    <string name="title_activity_event_home_screen">EventHomeScreen</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="events">Events</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="notes">Notes:</string>
    <string name="members">Members:</string>
    <string name="date">Date:</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="new_event">New Event</string>
    <string name="write_your_notes_here">Write your notes here…</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="select_a_date">Select a Date</string>
    <string name="members_list">Members List</string>
    <string name="all">All</string>
    <string name="textview">TextView</string>
    <string name="event_details">Event Details</string>
    <string name="back">BACK</string>
    <string name="push">Push Notifications</string>
    <string name="mobile">SMS Notifications</string>
    <string name="email">Email Notifications</string>
    <string name="invite">Invite:</string>
    <string name="category">Category:</string>
    <string name="new_activity">New Activity</string>
    <string name="activity_name">Activity Name</string>
    <string name="back_upper">Back</string>
    <string name="notification_type">Notification Type</string>
    <string name="go_back">Go Back</string>
    <string name="select_a_category">Select a Category</string>
    <string name="invite_activity_members">Invite Activity Members</string>
    <string name="create_a_custom_category">Create a Custom Category</string>
    <string name="category_name">Category Name</string>
    <string name="view_cateogory_bottom_sheet">View Cateogory Bottom Sheet</string>
    <string name="member_name">Member Name</string>
    <string name="activities">Activities</string>
    <string name="lists">Lists</string>
    <string name="lists_and_activities">Lists and Activities</string>
    <string name="open_menu">Open Menu Bottom Sheet Dialog</string>
    <string name="add_new_act_list">Create New Activity or List</string>
    <string name="select_a_color">Select a Color:</string>
    <string name="click_to_select_a_color">Click to select a color</string>
    <string name="activity">Activity</string>
    <string name="edit_curernt_activity">Edit Curernt Activity</string>
    <string name="delete_current_activity">Delete Current Activity</string>
    <string name="go_back_to_lists_activities"><![CDATA[Go Back to Lists & Activities]]></string>
    <string name="pick_a_color">Pick a Color</string>
    <string name="delete_category">Delete Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="mode_category">Mode Category</string>
    <string name="list_item_name">List Item Name</string>
    <string name="mode_task">Mode Task</string>
    <string name="task_items">Task Items</string>
    <string name="list_name">List Name</string>
    <string name="items">Items</string>
    <string name="delete_current_list">Delete Current List</string>
    <string name="mode_list">Mode List</string>
    <string name="edit_list_item">Edit List item</string>
    <string name="delete_list_item">Delete List item</string>
    <string name="add_message">Add Message</string>
    <string name="messages">Messages</string>
    <string name="create_message">Create Message</string>
    <string name="title">Title</string>
    <string name="write_message">Write Message</string>
    <string name="notify_via">Notify Via:</string>
    <string name="title_colon">Title:</string>
    <string name="message_colon">Message:</string>
    <string name="sync_updates">Sync Updates</string>
    <string name="message_title">Message Title</string>
    <string name="this_is_default_message_content">This is default message content</string>
    <string name="clement_on_today">\@clement on Today</string>
    <string name="v_e_d">View, Edit, or Delete</string>
    <string name="default_price">$100</string>
    <string name="bill_name">Bill Name</string>
    <string name="link">Link:</string>
    <string name="link_to_payment_page">Link to Payment Page</string>
    <string name="due_date">Due Date</string>
    <string name="permitted">Permitted:</string>
    <string name="amount_due">Amount Due</string>
    <string name="amount">Amount:</string>
    <string name="mode_bill">Mode Bill</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="open_bill_options_menu">Open Bill Options Menu</string>
    <string name="overdue">Overdue</string>
    <string name="add_bill">Add Bill</string>
    <string name="edit_bill">Edit Bill</string>
    <string name="bill_details">Bill Details</string>
    <string name="default_pic">https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Android_logo_2019.png/800px-Android_logo_2019.png</string>
    <string name="invited_you">Invited you</string>
    <string name="accept_invite">Accept Invite</string>
    <string name="decline_invite">Decline Invite</string>
    <string name="member_email">Member Email</string>
    <string name="member_full_name">Member Full Name</string>
    <string name="member_profile_picture">Member Profile Picture</string>
    <string name="home_members">Home Members</string>
    <string name="invite_member">Invite Member</string>
    <string name="your_home_access_code">Access Code:</string>
    <string name="family_events">Family Events</string>
    <string name="personal">Personal</string>
    <string name="board">Board</string>
    <string name="send_invite">Send Invite</string>
    <string name="email_address">Email Address...</string>
    <string name="send_an_invite">Send an Invite</string>
    <string name="i_have_paid_this_bill">I HAVE PAID THIS BILL</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="conflict_date">Conflict Date</string>
    <string name="conflictee">Conflictee</string>
    <string name="send_changes">Send Changes</string>
    <string name="there_are_no_conflicts_currently">There are no conflicts currently</string>
    <string name="conflicts">Conflicts</string>
    <string name="done">Done</string>
    <string name="everyone_must_accept_the_changes">Everyone must accept the changes</string>
    <string name="go_back_to_event">Go back to event</string>
    <string name="sync_conflicts">Sync Conflicts</string>
    <string name="new_date">New Date</string>
    <string name="propose_a_date">Propose a Date:</string>
    <string name="conflicting_date">Conflicting Date:</string>
    <string name="check_conflicts">Check Conflicts</string>
    <string name="activity_date">Activity Date</string>
    <string name="email_colon">Email:</string>
    <string name="name_text">Name</string>
    <string name="phone">Phone:</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_text">Email</string>
    <string name="your_profile">Your Profile</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="password">Password:</string>
    <string name="password_text">Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="address">Address:</string>
    <string name="description_colon">Description:</string>
    <string name="home_information">Home Information</string>
    <string name="description_text">Description</string>
    <string name="home_address">Home Address</string>
    <string-array name="notificationType">
        <item>Email</item>
        <item>Push</item>
        <item>SMS</item>
    </string-array>
</resources>