<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_desc">

    <LinearLayout
        android:id="@+id/headerLayoutNE"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtnNewActivity"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:contentDescription="@string/go_back_to_lists_activities"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <TextView
            android:id="@+id/createActivityTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/activity"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/editBtnActivity"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:contentDescription="@string/edit_curernt_activity"
            android:src="@drawable/ic_baseline_edit_24" />

        <ImageButton
            android:id="@+id/deleteBtnActivity"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:contentDescription="@string/delete_current_activity"
            android:src="@drawable/ic_baseline_delete_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayoutNE">

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minWidth="120dp"
                android:text="@string/name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/activity_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/categoryLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/categoryText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minWidth="120dp"
                android:text="@string/category"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/select_a_category" />

            <ImageButton
                android:id="@+id/newCategoryButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#00FFFFFF"
                android:contentDescription="@string/create_a_custom_category"
                android:src="@drawable/ic_baseline_add_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dateLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minWidth="120dp"
                android:text="@string/date"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/dateInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/select_a_date"
                android:importantForAutofill="no"
                android:inputType="date"
                android:minHeight="48dp"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/inviteLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/inviteText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:minWidth="120dp"
                android:text="@string/invite"
                android:textSize="16sp" />


            <Spinner
                android:id="@+id/inviteSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/invite_activity_members" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/noteText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:minWidth="120dp"
                android:text="@string/notes"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/notesInput"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/write_your_notes_here"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notificationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentLayout">

        <TextView
            android:id="@+id/notifyTypeTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/notification_type"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/emailCheckBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/email"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/smsCheckBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/mobile"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/pushCheckBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/push"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationLayout">

        <Button
            android:id="@+id/cancelBtnNewActivity"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/back_upper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveBtnNewActivity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveBtnNewActivity"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelBtnNewActivity"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>