<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateMessage">

    <LinearLayout
        android:id="@+id/billHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/exitBillBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="#00FFFFFF"
            android:contentDescription="@string/go_back"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <TextView
            android:id="@+id/billMode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/create_message"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/msgTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billHeaderLayout">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:minWidth="120dp"
            android:text="@string/title_colon"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/billNameInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/allround"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="#242124"
            android:textColorHint="#555555"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/msgMessageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msgTitleLayout">

        <TextView
            android:id="@+id/noteText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:minWidth="120dp"
            android:text="@string/message_colon"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/noteInput"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/allround"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/write_message"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:textColor="#242124"
            android:textColorHint="#555555"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/billNotifyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/msgMessageLayout">

        <TextView
            android:id="@+id/taskListTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/notify_via"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/notifyEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/email"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/notifySMS"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/mobile"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/notifyPush"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/push"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelMsgBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/back_upper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveMsgBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveMsgBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelMsgBtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>